fix related to sidenav collapse

--- a/src/app/application/deployment-verification/deployment-verification.component.less
+++ b/src/app/application/deployment-verification/deployment-verification.component.less
@@ -272,3 +272,16 @@ paddingLeftRight5
   width: 80% !important;
   min-height: 400px;
 }
+.padding0
+{
+padding:0px !important;
+}
+.adjustwidth
+{
+width: 80% !important;
+margin-right: 20% !important;
+}
+.noPaddingRight
+{
+padding-right: 0px !important;
+}
